--- a/lnc_RNA_norm_filtrado.Rmd
+++ b/lnc_RNA_norm_filtrado.Rmd
@@ -7,13 +7,14 @@ output: html_document
 
 ##Cargar y filtrar solo los genes que sean lnc_RNA.
 ```{r}
-setwd("C:\\Users\\MI\\Desktop\\MASTER\\TFM\\NASIR\\lnc_RNA")
 library(tidyverse)
 
+setwd("C:\\Users\\MI\\Desktop\\MASTER\\TFM\\NASIR\\lnc_RNA")
 lnc_RNA <- read.csv2("lnc_RNA.csv", header = TRUE)
+
 ##NASIR_T_P sin genes duplicados
 setwd("C:\\Users\\MI\\Desktop\\MASTER\\TFM\\NASIR\\NASIR_T_P(normalizados)")
-NASIR_T_P <-read.csv2("NASIR_T_P_NORMALIZED(BIEN).csv", header = TRUE)
+NASIR_T_P <-read.csv2("NASIR_T_P(sin duplicados).csv", header = TRUE)
 
 ##Eliminamos columna 2
 lnc_RNA[,2] <- NULL
