--- a/protein_coding_norm_filtrado.Rmd
+++ b/protein_coding_norm_filtrado.Rmd
@@ -6,12 +6,12 @@ output: html_document
 ---
 
 ```{r}
-setwd("C:\\Users\\MI\\Desktop\\MASTER\\TFM\\NASIR\\protein_coding")
 library(tidyverse)
+setwd("C:\\Users\\MI\\Desktop\\MASTER\\TFM\\NASIR\\protein_coding")
 p_c <- read.csv2("protein_coding.csv", header = TRUE)
 
 setwd("C:\\Users\\MI\\Desktop\\MASTER\\TFM\\NASIR\\NASIR_T_P(normalizados)")
-NASIR_T_P <-read.csv2("NASIR_T_P_NORMALIZED(BIEN).csv", header = TRUE)
+NASIR_T_P <-read.csv2("NASIR_T_P(sin duplicados).csv", header = TRUE)
 
 ##Eliminamos columna 2
 p_c[,2] <- NULL
